# sokoban-gui-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
assets/levels/: levels.json
src/: direction.rs  game.rs  level.rs  levels_config.rs  main.rs  save.rs  textures.rs
