[package]
name = "sokoban-gui-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
